--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,5 +1,7 @@
 ---
 import { ArrowRight, Heart, Shield, Sparkles, Users } from "lucide-react";
+import { Image } from "astro:assets";
+import dashboardScreen from "../../assets/images/screens/screen-01-dashboard.PNG";
 import { type Lang } from "../../i18n/ui-locales";
 import { useTranslations } from "../../i18n";
 
@@ -97,13 +99,18 @@ const t = useTranslations(lang);
                         <div
                             class="w-full aspect-[9/19.5] rounded-[32px] overflow-hidden bg-gray-100 dark:bg-gray-900"
                         >
-                            <img
-                                src={`${
-                                    import.meta.env.BASE_URL
-                                }/assets/images/screens/screen-01-dashboard.PNG`}
-                                alt="VitalsPath"
-                                class="w-full h-full object-cover object-top"
-                            />
+                            <div
+                                class="w-full aspect-[9/19.5] rounded-[32px] overflow-hidden bg-gray-100 dark:bg-gray-900"
+                            >
+                                <Image
+                                    src={dashboardScreen}
+                                    alt="VitalsPath"
+                                    class="w-full h-full object-cover object-top"
+                                    width={800}
+                                    height={1600}
+                                    loading="eager"
+                                />
+                            </div>
                         </div>
                         <div
                             class="absolute top-5 left-1/2 -translate-x-1/2 w-28 h-7 bg-black rounded-full"
