--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,28 @@ const siteUrl = "https://vitalspath.com";
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content={description} />
+		<meta
+			name="google-site-verification"
+			content="YOUR_VERIFICATION_CODE"
+		/>
+
+		<!-- Google Tag Manager -->
+		<script is:inline>
+			(function (w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({
+					"gtm.start": new Date().getTime(),
+					event: "gtm.js",
+				});
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : "";
+				j.async = true;
+				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, "script", "dataLayer", "GTM-N5RRS3V8");
+		</script>
+		<!-- End Google Tag Manager -->
 
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content={title} />
@@ -71,6 +93,15 @@ const siteUrl = "https://vitalspath.com";
 	<body
 		class="bg-white dark:bg-black text-gray-900 dark:text-white min-h-screen transition-colors"
 	>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript
+			><iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-N5RRS3V8"
+				height="0"
+				width="0"
+				style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<div class="fixed inset-0 pointer-events-none overflow-hidden z-0">
 			<div
 				class="absolute w-[500px] h-[500px] bg-blue-400/20 dark:bg-blue-500/10 rounded-full blur-[100px] top-[-5%] left-[-5%] animate-float"
